--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-rtc-fire-ssr",
+  "name": "call_all",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
@@ -46,6 +46,7 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.1.0"
   }
 }
