--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,11 @@
     "node": "10"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "web-push": "^3.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
